2024-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/ialu.cc:
	  Fix simulation of msk instruction.
	* src/f8/gen.c:
	  Use msk instruction in codegen for bit-field writes.

2024-11-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc:
	  ld(w) prefix fixes.
	* src/f8/gen.c:
	  Improve f8 codegen for writes via pointer.

2024-11-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/Makefile.in
	  support/regression/ports/*/spec.mk:
	  Since we have the cycle timeout now, the realtime-timeout has become less important. So don't bother maintaining is separately at the port level.

2024-11-24 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCast.c,
	  support/regression/tests/bug-3802.c:
	  Fix bug #3802.

2024-11-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc:
	  ldi, ldwi operand swap.

2024-11-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c:
	  Fix printing of C23 nullptr in diagnostics.
	* sim/ucsim/src/sims/f8.src/ialu.cc,
	  src/f8/peeph.def:
	  Change f8 n flag semantics for 8-bit shifts. Fix some flag issues in f8 peephole optimizer rules.

2024-11-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asmain.c: applied patch #483 to use search path for
	  .incbin, thanks Michel Iwaniec,
	  also added some synchronization with ASxxxx v5.50

2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/peep.c,
	  src/f8/peeph.def,
	  src/f8/ralloc.c:
	  Various f8 improvements.

2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCpeeph.c,
	  src/hc08/ralloc2.cc,
	  src/mos6502/ralloc2.cc,